--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,16 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Project handy{% endblock title %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <link href="/docs/5.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <!-- Bootstrap core CSS -->
+        <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
         <!-- Custom styles for this template -->
-        <link href="headers.css" rel="stylesheet">
+        <link href="{% static 'bootstrap/css/headers.css' %}" rel="stylesheet">
+
 
         <style>
             .bd-placeholder-img {
@@ -163,12 +166,15 @@
               </div>
             </div>
         </header>
-                    
-        {% block content %}
+        
+        <main>
+          {% block content %}
 
-        {% endblock content%}
-                          
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+          {% endblock content %}
+        </main>
+
+        <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+        <script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
     </body>
 </html>
 
